# SnapCCESS

./: .gitignore  CHAGES.md  README.md
snapccess-py/: README.md  pyproject.toml
snapccess-py/snapccess/: model.py  train.py  util.py
snapccess-r/: README.md
snapccess-r/SnapCCESS/: DESCRIPTION  NAMESPACE
snapccess-r/SnapCCESS/R/: SnapCCESS.R  global.R  install.R  loadmodule.R
snapccess-r/SnapCCESS/man/: build_model.Rd  install_SnapCCESS.Rd  loadmodule.Rd  preprocess.Rd  run_SnapCCESS.Rd
tutorials/: README.md
tutorials/src/: SnapCCESS_R_example.Rmd  SnapCCESS_R_example.html  SnapCCESS_R_example.qmd  an_example_of_generate_embedding_using_SnapCCESS_python_version.ipynb
