[tool.poetry]
name = "SnapCCESS"
version = "0.2.1"
description = "Ensemble deep learning of embeddings for clustering multimodal single-cell omics data"
authors = ["Lijia Yu <yulj2010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.5.1"
tqdm = "^4.64.1"
torch = "^1.13.0"
pynvml = "^11.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
